Fixing product on mobile

--- a/assets/scss/parts/product-short-description/product-short-description.scss
+++ b/assets/scss/parts/product-short-description/product-short-description.scss
@@ -2,4 +2,8 @@
 	@include margin(no, no, no, yes);
 	@include padding(yes, no, yes, yes);
 	@include border(normal, left);
+
+	@include mobile {
+		margin-left: calc(#{$lem * 2 - $lem / 4}) !important;
+	}
 }
