--- a/style.css
+++ b/style.css
@@ -1245,6 +1245,9 @@ html {
           @media only screen and (min-width: 768px) {
             html body .site-content .col-full .content-area .site-main .products .product .product-information .product-short-description {
               padding-left: 2.5em; } }
+          @media only screen and (max-width: 767.9px) {
+            html body .site-content .col-full .content-area .site-main .products .product .product-information .product-short-description {
+              margin-left: calc(2.1875em) !important; } }
       html body .site-content .col-full .content-area .site-main .woocommerce-pagination {
         background-color: #000;
         color: #fff;
